2019-02-07  Richard Larsson <larsson@mps.mpg.de>

	* arts-2-3-1220
	
	* src/transmissionmatrix.cc:  Now assumes a value
	is zero if it is below 1e-7 for the purposes of
	sin(x)/x, cos(x)/x, cosh(x)/x, and sinh(x)/x
	
	Open question:
	I need something better than this for said type of functions?

2019-02-07  Richard Larsson <larsson@mps.mpg.de>

	* arts-2-3-1219
	
	* src/quantum.cc,h:  Encountered bug in quantum comparitor
	(the upper state was never checked during transition-type ID).
	Decided to redesign comparitor because the overload of < and >
	were too difficult.  Also introduced (InLower) and (InUpper) to
	reduce copy-creation of QuantumIdentifiers when levels needed
	to be identified in a transition.
	
	* src/zeeman.cc:
	* src/m_zeeman.cc:
	* src/m_nlte.cc:
	* src/m_atmopshere.cc:
	Removed use of "<" and ">" for quantum IDs.
	
	* src/linefunctions.cc:
	Removed use of "<" and ">" for quantum IDs.
	Also, named data blocks.
	
	* controlfiles/artscomponents/nlte/testdata/nlte_testdata.xml:
	Updated because it is the only test case affected by the
	quantum.cc,h bug.  Changes are relatively large, and the
	reason is that ARTS previosly computed the wrong line-collisional
	quenching.
	
	* controlfiles/artscomponents/nlte/testRotationalConvergence.arts:
	Added an out-commented WriteXML-statement.

2019-02-05  Richard Larsson <larsson@mps.mpg.de>

	* arts-2-3-1218
	
	* src/zeeman.cc:  Moving some code to make it easier to read.
	
	* src/zeemandata.cc:  Made the errors clearer.
	
	* src/transmissionmatrix.cc:  Fix to logic error in dtransmat4.
	Before, small derivatives caused large errors.  Especially,
	for a very special derivative, something similar to a ZeroDiv-
	operation could occur.  For all small values of the derivatives,
	additionally, the previous logic performed many computations of the 
	type g(x)~=N, f(y)~=N, C=f(y)-g(x), which of course produced a
	noisy jacobian as the numerical accuracy is poor for the above 